hphp/hack/test/typecheck/denotable_unions/intershape.php.exp
File "intershape.php", line 29, characters 18-44:
Invalid argument (Typing[4110])
  File "intershape.php", line 8, characters 20-22:
  Expected `nothing`
  File "intershape.php", line 29, characters 18-44:
  But got `shape('a' => int, 'b' => string)`
